# foto-uart-dropin

./: .gitignore  CHANGELOG-PI-ZERO.md  CONTRIBUTING.md  LICENSE  README.md  migrate_to_pi_zero.sh  pyproject.toml  requirements-pi-zero.txt  requirements.txt
.github/workflows/: tests.yml
config/esp32/: config.example.h
config/raspberry_pi/: config.example.json  config_pi3b.json  config_pi_zero.json
docs/: DUAL_PI_SETUP.md  PI3B_COMMANDER_GUIE.md
docs/01_Requerimientos/: TP1_FOTO_UART_DROPIN_REC01.tex  charter.cls
docs/installation/: DUAL_PI_SETUP.md  README.md
docs/pi-zero/: README.md  installation-guide.md
docs/troubleshooting/: README.md
examples/basic_setup/: simple_capture.py
main/scripts/: diagnostico_completo.sh
requirements/: base.txt
scripts/setup/: auto_update.sh  foto-uart-updater.service  foto-uart-updater.timer  install_pi3b.sh  install_pi3b_V01.sh  install_pi_V01.sh  install_pi_zero.sh  install_raspberry_pi.sh  verify_pi_zero.sh
src/raspberry_pi/: captura_foto.py  foto_uart.py  foto_uart_with_auto_update.py  pi3b_commander.py  updater.py
src/raspberry_pi/models/: image_metadata.py
src/shared/: protocols.py
